Change cocktail display viewModel

--- a/Dionysus/Dionysus.csproj
+++ b/Dionysus/Dionysus.csproj
@@ -189,7 +189,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModel\CocktailViewModel.cs" />
+    <Compile Include="ViewModels\CocktailViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
